--- a/index.css
+++ b/index.css
@@ -3,3 +3,13 @@ margin:0px auto;
 padding:0px auto;
 box-sizing:border-box;
 }
+.nav {
+
+}
+
+// 为了以防万一，使用jQuery来做，分开nav
+.nav ul {
+display:flex;
+justify-content:center;
+align-items:center;
+}
